--- a/schema/turn.css
+++ b/schema/turn.css
@@ -51,6 +51,7 @@
     display: inline-block;
     position: relative;
     width: 100%;
+    z-index: -1;
   }
   
   @media screen and (max-width: 800px) {
